Fixed alignment issues with text no appearing in the center, stylized time cell data

--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ body {
     font-size: 20px;
     padding: 15px;
     text-transform: uppercase;
-    text-align: left;
-    margin-left: 20px;
+    text-align: center;
+    margin-left: 0px;
     font-weight: 500;
     line-height: 2.7;
     letter-spacing: 0.8px;
@@ -45,6 +45,7 @@ body {
   td {
     border: 2px solid #8c6b48;
     width: 300px;
+    text-align: left;
   }
   
   footer {
@@ -70,6 +71,8 @@ body {
   
   
   .left {
-    width: 150px;
+    font-style: italic;
+    font-weight: 20px;
+    color: #CCFFFFF;
   }
   
